# gmh-resolver-ui

./: Dockerfile  pyproject.toml  pytest.ini
doc/: license.conf
gmh_resolver_ui/: __init__.py  _path.py  _version.py  check_url.py  config.py  main.py  server.py
gmh_resolver_ui/config-data/: web-resources.json
gmh_resolver_ui/static/: gmh-resolver.css
gmh_resolver_ui/templates/: base.j2  invalid.j2  main.j2  page.j2  results.j2
gmh_resolver_ui/views/: __init__.py  general.py  resolve.py
