[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gmh-resolver-ui"
authors = [
    {name = "Thijs Janssen", email = "thijs@seecr.nl"},
    {name = "Johan Jonkers", email = "johan@seecr.nl"},
]
description = "Front-End voor Resolver"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["wwft", "frontend"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp >= 3.11.18, < 4",
    "asyncio >= 3.4.3, < 4",
    "Jinja2 >= 3.1.6, < 4",
    "packaging >= 24.2, < 25",
    "pytest >= 8.3.5, < 9",
    "pytest-asyncio >= 0.26.0, < 1",
    "starlette >= 0.46.2, < 1",
    "swl >= 2.5.1, < 3",
    "mysql-connector-python"
]
dynamic = ["version"]

[project.scripts]
gmh-resolver-server = "gmh_resolver_ui.main:main_app"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "gmh_resolver_ui/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.isort]
profile = "black"

[tool.djlint]
profile = "jinja"
extension = ".j2"
ignore = "D018,J018,J004"
blank_line_before_tag = "extends,include,block"
max_line_length = 120
